Third Page Mostly Done

--- a/Interface/Html/MainPage.html
+++ b/Interface/Html/MainPage.html
@@ -16,8 +16,11 @@
         <a href="./Second.html">
           <button class="circle1"></button>
         </a>
-        <button class="circle2"></button>
-      </div>
+
+        <a href="./Third.html">
+          <button class="circle2"></button>
+        </a>
+    </div>
        
 </body>
 </html>
