--- a/Interface/Html/Third.html
+++ b/Interface/Html/Third.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Interface/Css/Third.css">
+    <link rel="stylesheet" href="../Css/Third.css">
     <title>Can I Cook </title>
 </head>
 <body>
-    <img src="/Interface/Images/p2.png" alt="Ingredient Image">
+    <img src="../Images/p2.png" alt="Ingredient Image">
     <h1 id="sentence">Let us Help You Know whether you can prepare this dish Or not ! </h1>
      
      <form id="selectDish">
