--- a/Interface/Html/result2.html
+++ b/Interface/Html/result2.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Interface/Css/Result2.css">
+    <link rel="stylesheet" href="../Css/Result2.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container" id="container1">
-        <img src="/Interface/Images/Yes.png" alt="" class="image">
+        <img src="../Images/Yes.png" alt="" class="image">
         <h1 id="sentence" class="text">Absolutely! You can whip up this delightful dish!</h1>
       </div>
       
       <div class="container" id="container2">
-        <img src="/Interface/Images/No.png" alt="" class="image" id="no">
+        <img src="../Images/No.png" alt="" class="image" id="no">
         <h1 id="sentence" class="text">I'm sorry to tell you that you're unable to prepare this dish. Hopefully, you'll have the opportunity to try it another time!</h1>
       </div>
       
