--- a/Interface/Html/Second.html
+++ b/Interface/Html/Second.html
@@ -163,7 +163,7 @@
 var resultButton = document.getElementById('submit');
 
 // Check the referring page and set the appropriate destination for the button
-if (referringPage.includes('MainPage.html')) {
+if (referringPage.includes('index.html')) {
   resultButton.addEventListener('click', function() {
     // Redirect to Result1 page
     window.location.href = 'Result1.html';
