--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/MainPage.css">
+    <link rel="stylesheet" href="Interface/Css/MainPage.css">
     <title>Document</title>
 </head>
 <body>
     <div class="first-page">
-        <img src="../Images/food.png" alt="Food">
+        <img src="Interface/Images/food.png" alt="Food">
         <div id="Title">
           <h1>Tasty Bites</h1>
         </div>
-        <a href="./Third.html">
+        <a href="Interface/Html/Third.html">
           <button class="circle1"></button>
         </a>
 
-        <a href="./Second.html">
+        <a href="Interface/Html/Second.html">
           <button class="circle2"></button>
         </a>
     </div>
