--- a/Interface/Html/Result1.html
+++ b/Interface/Html/Result1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="sentence">We have selected the most mouthwatering dishes that you can prepare!</h1>
-    <img src="/Interface/Images/3.png">
+    <img src="../Images/3.png">
     <form action="/Second.html" method="POST" id="resultForm">
         <label for="dish_name">Dish Name:</label><br>
         <input type="text" name="dish_name" id="dish_name" readonly class="resultt"><br><br>
